--- a/.github/workflows/admin.deploy.chromatic.yml
+++ b/.github/workflows/admin.deploy.chromatic.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN_ADMIN }}
-      WORKING_DIRECTORY: ./admin
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: './.tool-versions'
       - name: Admin | Build
         run: npm install && npm run chromatic -- --exit-zero-on-changes
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        working-directory: ./admin
