--- a/.github/workflows/deploy.docs.yml
+++ b/.github/workflows/deploy.docs.yml
@@ -12,14 +12,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Set Node version
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@v4
         with:
-          node-version: '>=21'
-
-      - name: Checkout
-        uses: actions/checkout@master
-
+          node-version-file: './.tool-versions'
       - name: vuepress-deploy
         uses: IT4Change/vuepress-build-and-deploy@master
         env:
