--- a/.github/workflows/presenter.deploy.chromatic.yml
+++ b/.github/workflows/presenter.deploy.chromatic.yml
@@ -9,18 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN_PRESENTER }}
-      WORKING_DIRECTORY: ./presenter
     steps:
-      - name: Set Node version
-        uses: actions/setup-node@v4
-        with:
-          node-version: '>=21'
-
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: './.tool-versions'
       - name: Presenter | Build
         run: npm install && npm run chromatic -- --exit-zero-on-changes
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        working-directory: ./presenter
