--- a/authentik/docker-compose.test.yml
+++ b/authentik/docker-compose.test.yml
@@ -1,3 +1,12 @@
+x-mail-settings: &x-mail-settings
+  environment:
+    - AUTHENTIK_EMAIL__HOST=mailserver
+    - AUTHENTIK_EMAIL__PORT=1025
+    - AUTHENTIK_EMAIL__USE_TLS=false
+    - AUTHENTIK_EMAIL__USE_SSL=false
+    - AUTHENTIK_EMAIL__TIMEOUT=10
+    - AUTHENTIK_EMAIL__FROM=authentik@example.com
+
 services:
   mailserver:
     image: axllent/mailpit
@@ -6,3 +15,8 @@ services:
     ports:
       - 8025:8025
       - 1025:1025
+
+  server:
+    <<: *x-mail-settings
+  worker:
+    <<: *x-mail-settings
