refactor(other): run remark from root folder only
Motivation
----------
This is a side quest from #1321.

Since #1317 we lint markown files from the root folder. It makes no
sense to run it again and again from each subfolder.

Benefits:
* Less dependencies
* Faster CI because of:
  * `npm install`
  * `npm run test:lint`
* Faster deployment

How to test
-----------
1. See build checks

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "pinia",
     "vue-i18n",
     "eslint",
-    "remark-cli",
     "stylelint",
     "vitest",
     "storybook",
@@ -42,11 +41,10 @@
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build -o build/storybook",
     "storybook:test": "test-storybook",
-    "test:lint": "npm run test:lint:eslint && npm run test:lint:remark && npm run test:lint:style && npm run test:lint:locales",
+    "test:lint": "npm run test:lint:eslint && npm run test:lint:style && npm run test:lint:locales",
     "test:lintfix": "npm run test:lint:eslint -- --fix && npm run test:lint:style -- --fix && npm run test:lint:locales -- --fix",
     "test:lint:eslint": "eslint --ext .vue,.ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:lint:locales": "scripts/locales/locales.sh src/locales",
-    "test:lint:remark": "remark . --quiet --frail",
     "test:lint:style": "stylelint --max-warnings 0 --ignore-path .gitignore \"**/*.{css,scss,vue,vuex}\"",
     "test:unit": "npm run test:unit:dev -- run --coverage",
     "test:unit:update": "npm run test:unit:dev -- run --coverage -u",
@@ -132,11 +130,6 @@
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remark-cli": "^12.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-preset-lint-consistent": "^6.0.0",
-    "remark-preset-lint-markdown-style-guide": "^6.0.0",
-    "remark-preset-lint-recommended": "^7.0.0",
     "storybook": "^8.1.10",
     "stylelint": "^16.6.1",
     "stylelint-config-css-modules": "^4.4.0",
