--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,8 @@
     "db:migrate:deploy": "TZ=UTC npx prisma migrate deploy",
     "db:reset": "TZ=UTC npx prisma migrate reset --force",
     "db:seed": "TZ=UTC npx prisma db seed",
-    "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
+    "test:lint": "npm run test:lint:eslint",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
-    "test:lint:remark": "remark . --quiet --frail",
     "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
     "test": "npm run test:lint && npm run test:unit",
     "docs:dev": "vuepress dev .",
@@ -76,11 +75,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
-    "remark-cli": "^12.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-preset-lint-consistent": "^6.0.0",
-    "remark-preset-lint-markdown-style-guide": "^6.0.0",
-    "remark-preset-lint-recommended": "^7.0.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
