--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "test": "npm run test:lint",
     "docs:dev": "vuepress dev .",
     "docs:build": "vuepress build .",
-    "release": "scripts/release.sh",
-    "update": "npx npm-check-updates"
+    "release": "scripts/release.sh"
   },
   "dependencies": {
     "@vuepress/theme-default": "^2.0.0-rc.35"
@@ -36,6 +35,7 @@
     "@vuepress/bundler-vite": "^2.0.0-rc.11",
     "remark-cli": "^12.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-lint-list-item-indent": "^4.0.0",
     "remark-preset-lint-consistent": "^6.0.0",
     "remark-preset-lint-markdown-style-guide": "^6.0.0",
     "remark-preset-lint-recommended": "^7.0.0",
