--- a/admin/package.json
+++ b/admin/package.json
@@ -92,12 +92,14 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^8.1.10",
     "@storybook/vue3-vite": "^8.1.10",
+    "@types/fs-extra": "^11.0.4",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "chromatic": "^11.5.4",
+    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -112,6 +114,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-vuetify": "^2.4.0",
     "eslint-plugin-yml": "^1.14.0",
+    "fs-extra": "^11.2.0",
     "happy-dom": "^14.12.3",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
