--- a/frontend/package.json
+++ b/frontend/package.json
@@ -104,6 +104,7 @@
     "@storybook/vue3": "^8.1.10",
     "@storybook/vue3-vite": "^8.1.10",
     "@types/cookie": "^0.6.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/js-cookie": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
@@ -111,6 +112,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "chromatic": "^11.5.4",
+    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -125,6 +127,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-vuetify": "^2.4.0",
     "eslint-plugin-yml": "^1.14.0",
+    "fs-extra": "^11.2.0",
     "happy-dom": "^14.12.3",
     "mock-apollo-client": "^1.3.1",
     "prettier": "^3.3.2",
