--- a/presenter/package.json
+++ b/presenter/package.json
@@ -98,6 +98,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^8.1.9",
     "@storybook/vue3-vite": "^8.1.9",
+    "@types/fs-extra": "^11.0.4",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
@@ -105,6 +106,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "chromatic": "^11.5.4",
+    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -120,6 +122,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-vuetify": "^2.4.0",
     "eslint-plugin-yml": "^1.14.0",
+    "fs-extra": "^11.2.0",
     "happy-dom": "^14.12.0",
     "mock-apollo-client": "^1.3.1",
     "prettier": "^3.3.2",
