--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,12 @@
     "@apollo/server": "^4.10.4",
     "@getbrevo/brevo": "^2.2.0",
     "@prisma/client": "^5.16.1",
+    "@types/express": "^4.17.21",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.4.0",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
