--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@getbrevo/brevo": "^2.2.0",
+    "@graphql-tools/schema": "^10.0.4",
     "@prisma/client": "^5.16.1",
     "@types/express": "^4.17.21",
     "axios": "^1.7.2",
@@ -40,6 +41,7 @@
     "fast-xml-parser": "^4.4.0",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.1",
     "prisma-extension-soft-delete": "^1.0.1",
@@ -47,7 +49,8 @@
     "tsconfig-paths": "^4.2.0",
     "tslog": "^4.9.3",
     "type-graphql": "^2.0.0-rc.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
@@ -56,6 +59,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
