--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@apollo/server": "^4.10.4",
     "@getbrevo/brevo": "^2.2.0",
     "@graphql-tools/schema": "^10.0.4",
+    "@graphql-yoga/subscription": "^5.0.1",
     "@prisma/client": "^5.16.1",
     "@types/express": "^4.17.21",
     "axios": "^1.7.2",
@@ -42,6 +43,7 @@
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "graphql-ws": "^5.16.0",
+    "graphql-yoga": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.1",
     "prisma-extension-soft-delete": "^1.0.1",
