--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       admin: ${{ steps.filter.outputs.admin }}
-      admin-docs: ${{ steps.filter.outputs.admin-docs }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3.0.2
@@ -18,12 +17,6 @@ jobs:
             admin:
               - '.github/workflows/**/*'
               - 'admin/**/*'
-            admin-docs:
-              - '.github/workflows/**/*'
-              - 'admin/**/*.md'
-              - 'admin/.vuepress/*'
-              - 'admin/package.json'
-
   build:
     if: needs.files-changed.outputs.admin == 'true'
     name: Build - Admin
@@ -61,22 +54,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Admin | Build Docker Development
-        run: docker compose build admin admin-documentation admin-storybook
-
-  docs:
-    if: needs.files-changed.outputs.admin-docs == 'true'
-    name: Build Docs - Admin
-    needs: files-changed
-    runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./admin
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Admin | Build Docs
-        run: npm install && npm run docs:build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build admin admin-storybook
 
   storybook:
     if: needs.files-changed.outputs.admin == 'true'
