--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       backend: ${{ steps.filter.outputs.backend }}
-      backend-docs: ${{ steps.filter.outputs.backend-docs }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3.0.2
@@ -18,11 +17,6 @@ jobs:
             backend:
               - '.github/workflows/**/*'
               - 'backend/**/*'
-            backend-docs:
-              - '.github/workflows/**/*'
-              - 'backend/**/*.md'
-              - 'backend/.vuepress/*'
-              - 'backend/package.json'
 
   build:
     if: needs.files-changed.outputs.backend == 'true'
@@ -66,27 +60,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Backend | Build Docker Development
-        run: docker compose build backend backend-documentation
-
-  docs:
-    if: needs.files-changed.outputs.backend-docs == 'true'
-    name: Build Docs - Backend
-    needs: files-changed
-    runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./backend
-    steps:
-      - name: Set Node version
-        uses: actions/setup-node@v4
-        with:
-          node-version: '>=21'
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Backend | Build Docs
-        run: npm install && npm run docs:build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build backend
 
   lint:
     if: needs.files-changed.outputs.backend == 'true'
