--- a/.github/workflows/test.code.yml
+++ b/.github/workflows/test.code.yml
@@ -7,24 +7,36 @@ jobs:
     name: Detect File Changes
     runs-on: ubuntu-latest
     outputs:
-      markdown: ${{ steps.filter.outputs.markdown }}
+      docs: ${{ steps.filter.outputs.docs }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3.0.2
         id: filter
         with:
           filters: |
-            markdown:
-              - '/**/*.md'
-  
+            docs:
+              - '.github/workflows/**/*'
+              - '**/*.md'
+              - '.vuepress/*'
+              - 'package.json'
+
   test:
-    if: needs.files-changed.outputs.markdown == 'true'
-    name: Test - Code
+    if: needs.files-changed.outputs.docs == 'true'
+    name: Root - Test
     needs: files-changed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Code | Test
+      - name: Test | Root
         run: npm install && npm test
+
+  docs:
+    if: needs.files-changed.outputs.docs == 'true'
+    name: Build Docs - Root
+    needs: files-changed
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Root | Build Docs
+        run: npm install && npm run docs:build
