--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,6 @@
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
     "test": "npm run test:lint && npm run test:unit",
-    "docs:dev": "vuepress dev .",
-    "docs:build": "vuepress build .",
     "update": "npx npm-check-updates"
   },
   "prisma": {
@@ -33,7 +31,6 @@
     "@apollo/server": "^4.10.4",
     "@getbrevo/brevo": "^2.2.0",
     "@prisma/client": "^5.16.1",
-    "@vuepress/theme-default": "^2.0.0-rc.37",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -57,7 +54,6 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
-    "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -78,8 +74,7 @@
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.5.2",
-    "vuepress": "^2.0.0-rc.9"
+    "typescript": "^5.5.2"
   },
   "imports": {
     "#api/*": "./src/api/*",
