--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "stylelint",
     "vitest",
     "storybook",
-    "vuepress",
     "chromatic"
   ],
   "author": {
@@ -50,8 +49,6 @@
     "test:unit:update": "npm run test:unit:dev -- run --coverage -u",
     "test:unit:dev": "vitest",
     "test": "npm run test:lint && npm run test:unit",
-    "docs:dev": "vuepress dev .",
-    "docs:build": "vuepress build .",
     "chromatic": "npx chromatic --build-script-name storybook:build",
     "update": "npx npm-check-updates"
   },
@@ -68,7 +65,6 @@
     "@vue/apollo-ssr": "^4.0.0",
     "@vue/compiler-sfc": "^3.4.29",
     "@vue/server-renderer": "3.4.27",
-    "@vuepress/theme-default": "^2.0.0-rc.35",
     "compression": "^1.7.4",
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
@@ -110,7 +106,6 @@
     "@typescript-eslint/parser": "^7.13.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
-    "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "chromatic": "^11.5.4",
     "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
@@ -145,8 +140,7 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^2.0.3",
     "vitest": "^1.6.0",
-    "vue-tsc": "^1.8.27",
-    "vuepress": "^2.0.0-rc.9"
+    "vue-tsc": "^1.8.27"
   },
   "imports": {
     "#components/*": "./src/components/*",
