--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -13,6 +13,7 @@ PUBLIC_ENV__AUTH__ADMIN_REDIRECT_URI="http://localhost:3002/signin"
 
 # Endpoints
 PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
+PUBLIC_ENV__ENDPOINTS__WEBSOCKET_URI=ws://localhost:4000/subscriptions
 
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
