--- a/backend/package.json
+++ b/backend/package.json
@@ -30,13 +30,20 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@getbrevo/brevo": "^2.2.0",
+    "@graphql-tools/schema": "^10.0.4",
+    "@graphql-yoga/subscription": "^5.0.1",
     "@prisma/client": "^5.16.1",
+    "@types/express": "^4.17.21",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.4.0",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-ws": "^5.16.0",
+    "graphql-yoga": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.1",
     "prisma-extension-soft-delete": "^1.0.1",
@@ -44,14 +51,18 @@
     "tsconfig-paths": "^4.2.0",
     "tslog": "^4.9.3",
     "type-graphql": "^2.0.0-rc.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
