refactor(docker): remove obsolete database folder
Motivation
----------
There is no relevant code in this folder. Building a docker image with
a different name only adds one more entry to `docker images`:
```
dreammallearth-database                      latest               20cba03bf929   3 weeks ago    394MB
```

Which is not even re-usable for other applications.

How to test
-----------
1. Nothing to test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   database:
-    build:
-      context: ./database
-      target: mariadb_server
+    image: mariadb:10.5
     environment:
       - MARIADB_ALLOW_EMPTY_PASSWORD=1
       - MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1
