refactor(docker): restart authentik via include
Motivation
----------
Today I learned: Docker compose v2 has
[include](https://docs.docker.com/compose/multiple-compose-files/include/).

How to test
-----------
1. `docker compose up` from the root folder
2. All services, including authentik, start

--- a/authentik/docker-compose.test.yml
+++ b/authentik/docker-compose.test.yml
@@ -1,6 +1,6 @@
 x-mail-settings: &x-mail-settings
   environment:
-    - AUTHENTIK_EMAIL__HOST=mailserver
+    - AUTHENTIK_EMAIL__HOST=mailpit
     - AUTHENTIK_EMAIL__PORT=1025
     - AUTHENTIK_EMAIL__USE_TLS=false
     - AUTHENTIK_EMAIL__USE_SSL=false
@@ -8,15 +8,14 @@ x-mail-settings: &x-mail-settings
     - AUTHENTIK_EMAIL__FROM=authentik@example.com
 
 services:
-  mailserver:
+  mailpit:
     image: axllent/mailpit
-    container_name: mailpit
-    restart: unless-stopped
     ports:
       - 8025:8025
       - 1025:1025
 
-  server:
+  authentik:
     <<: *x-mail-settings
-  worker:
+
+  authentik-worker:
     <<: *x-mail-settings
