--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,3 +1,8 @@
+include:
+  - path:
+    - ./authentik/docker-compose.yml
+    - ./authentik/docker-compose.test.yml
+
 services:
   presenter:
     build:
