--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       retries: 5
       timeout: 5s
     volumes:
-      - ./database:/var/lib/postgresql/data
+      - database:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: ${PG_PASS:?database password required}
       POSTGRES_USER: ${PG_USER:-authentik}
