there was a missing FRONTEND prefix

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -8,7 +8,7 @@ BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
 FRONTEND_URL="http://localhost:3000/"
-INVITE_LINK_URL="${FRONTEND_URL}join-room/"
+FRONTEND_INVITE_LINK_URL="${FRONTEND_URL}join-room/"
   
 BBB_SHARED_SECRET=""
 BBB_URL=""
