--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -15,12 +15,8 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          cd authentik/
-          rm -rf database
-          ./database.unpack.sh
-          docker compose up -d
-          cd ../
-          docker compose up -d database
+          docker compose up -d --wait database authentik
+          docker compose exec -T postgresql psql authentik --username authentik < authentik/dump.sql
           cd backend
           cp .env.dist .env
           ln -s src/auth/public.pem public.pem
