refactor(docker): use default file names
Motivation
----------
Side quest of #1373. The motivation for the previous name was the fear
that the `docker-compose.yml` of our repository was used in production.

I've learned that this is not the case. So let's simplify our code
a little.

How to test
-----------
1. `cd authentik`
2. `docker compose up`
3. E.g. mailpit is running

--- a/authentik/docker-compose.override.yml
+++ b/authentik/docker-compose.override.yml
@@ -16,6 +16,8 @@ services:
 
   authentik:
     <<: *x-mail-settings
+    depends_on:
+      - mailpit
 
   authentik-worker:
     <<: *x-mail-settings
