--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -2,24 +2,7 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  location / {
-      proxy_http_version 1.1;
-      proxy_set_header   Upgrade $http_upgrade;
-      proxy_set_header   Connection 'upgrade';
-      proxy_set_header   X-Forwarded-For $remote_addr;
-      proxy_set_header   X-Real-IP  $remote_addr;
-      proxy_set_header   Host $host;
-      proxy_buffers      4 512k;
-      proxy_buffer_size  256k;
-
-      proxy_pass         http://127.0.0.1:3001/;
-      proxy_redirect     off;
-
-      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.presenter.log combined;
-      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.presenter.log warn;
-  }
-
-  location /api {
+  location /api/ {
       proxy_http_version 1.1;
       proxy_set_header   Upgrade $http_upgrade;
       proxy_set_header   Connection 'upgrade';
@@ -57,5 +40,22 @@ server {
 
       access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.hooks.log combined;
       error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.hooks.log warn;
+  }
+
+  location / {
+      proxy_http_version 1.1;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection 'upgrade';
+      proxy_set_header   X-Forwarded-For $remote_addr;
+      proxy_set_header   X-Real-IP  $remote_addr;
+      proxy_set_header   Host $host;
+      proxy_buffers      4 512k;
+      proxy_buffer_size  256k;
+
+      proxy_pass         http://127.0.0.1:3001/;
+      proxy_redirect     off;
+
+      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.presenter.log combined;
+      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.presenter.log warn;
   }
 }
