--- a/frontend/package.json
+++ b/frontend/package.json
@@ -126,11 +126,12 @@
     "eslint-plugin-vuetify": "^2.4.0",
     "eslint-plugin-yml": "^1.14.0",
     "fs-extra": "^11.2.0",
-    "happy-dom": "^14.12.3",
+    "jsdom": "^24.1.0",
     "mock-apollo-client": "^1.3.1",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resize-observer-polyfill": "^1.5.1",
     "storybook": "^8.1.10",
     "stylelint": "^16.6.1",
     "stylelint-config-css-modules": "^4.4.0",
