feat(authentik): seed authentik via blueprints
Motivation
----------
Blueprints are the authentik-native approach for automated
configuration: https://docs.goauthentik.io/developer-docs/blueprints/

*Of course* a postgres DB dump cannot be the setup for a new instance.
Things like URLs would differ and it's impossible to template
a Postgresql dump. But templating a blueprint *is*.

This PR is necessary for #1451 and basically any automated deployment.

In the future we should develop authentik flows via the blueprints *and
not through the UI* - this is not reproducible.

How to test
-----------
1. `cd authentik && docker compose up`
2. Wait for a certain amount of time, the `authentik-worker` has a lot
   to do initially.
3. Visit http://localhost:9000/if/admin/#/flow/flows;%7B%22search%22%3A%22dreammall%22%7D
4. Login with `akadmin` and password `dreammall`
5. The 5 dreammall flows are there.

*Edit:* The standard login procedure is also possible now:
1. `docker compose frontend backend authentik`
2. Visit http://localhost:3000/
3. Authentication works just as normal

Todo
----
- [x] Setup the frontend application
- [x] Setup the OpenID provider
- [ ] ~Set blueprint callback URLs via `ENV`s to the ones in
  `frontend/.env`~ I will *not* do this anymore. The problem is that
  `!Format` Tag template literal are really painful on multi-line
  strings. Instead, I decided to template these workflows with `helm` in
  another PR: #1451
- [ ] ~As soon as we have parity with the database seed we can remove any
  of the example flows that we don't need.~ Not so sure about that one,
  honestly. During development I had to overwrite the default oauth2
  scopes. I don't know how the application behaves if we would delete
  example blueprints etc.

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          docker compose up -d --wait database authentik
-          docker compose exec -T postgresql psql authentik --username authentik < authentik/dump.sql
+          docker compose up -d --wait database authentik authentik-worker
           cd backend
           cp .env.dist .env
           npm install
