--- a/authentik/blueprints/dreammall/dreammallearth-authorization-implicit-consent.yaml
+++ b/authentik/blueprints/dreammall/dreammallearth-authorization-implicit-consent.yaml
@@ -1,3 +1,6 @@
+version: 1
+metadata:
+  name: Authorization implicit consent
 context: {}
 entries:
 - attrs:
@@ -9,14 +12,7 @@ entries:
     policy_engine_mode: any
     title: Redirecting to DreamMall
   conditions: []
-  id: null
   identifiers:
-    pk: 1179d54d-2a3e-4bb4-91d5-252814138590
     slug: dreammallearth-authorization-implicit-consent
   model: authentik_flows.flow
   state: present
-metadata:
-  labels:
-    blueprints.goauthentik.io/generated: 'true'
-  name: authentik Export - 2024-03-28 11:33:52.346568+00:00
-version: 1
