--- a/authentik/blueprints/dreammall/dreammallearth-enrollment-email.yaml
+++ b/authentik/blueprints/dreammall/dreammallearth-enrollment-email.yaml
@@ -1,5 +1,15 @@
-context: {}
+version: 1
+metadata:
+  name: Enrollment email
+context:
+  group_name: Dreammall Users
+  redirect_url: !Env [DREAMMALL_FRONTEND_URL, "http://localhost:3000"]
 entries:
+- model: authentik_core.group
+  state: present
+  identifiers:
+    name: !Context group_name
+  id: dreammall-user-group
 - attrs:
     authentication: none
     compatibility_mode: true
@@ -19,7 +29,7 @@ entries:
 - attrs:
     field_key: password_repeat
     label: Password (repeat)
-    name: default-password-change-field-password-repeat
+    name: dreammall-password-change-field-password-repeat
     order: 301
     placeholder: Password (repeat)
     required: true
@@ -35,7 +45,7 @@ entries:
     initial_value: "try:\n    return user.username\nexcept:\n    return ''"
     initial_value_expression: true
     label: Username
-    name: default-user-settings-field-username
+    name: dreammall-user-settings-field-username
     order: 200
     placeholder: Username
     required: true
@@ -51,7 +61,7 @@ entries:
     initial_value: "try:\n    return user.name\nexcept:\n    return ''"
     initial_value_expression: true
     label: Name
-    name: default-user-settings-field-name
+    name: dreammall-user-settings-field-name
     order: 201
     placeholder: Name
     required: true
@@ -67,7 +77,7 @@ entries:
     initial_value: "try:\n    return user.email\nexcept:\n    return ''"
     initial_value_expression: true
     label: Email
-    name: default-user-settings-field-email
+    name: dreammall-user-settings-field-email
     order: 202
     placeholder: Email
     required: true
@@ -81,7 +91,7 @@ entries:
 - attrs:
     field_key: password
     label: Password
-    name: default-password-change-field-password
+    name: dreammall-password-change-field-password
     order: 300
     placeholder: Password
     required: true
@@ -93,14 +103,12 @@ entries:
   model: authentik_stages_prompt.prompt
   state: present
 - attrs:
-    expression: 'context[''flow_plan''].context[''redirect''] = ''https://stage1.app.dreammall.earth/signin''
-
-      return True'
+    expression: !Format ["context['flow_plan'].context['redirect'] = '%s/signin'\nreturn True", !Context redirect_url]
     name: dreammall.earth-redirect-frontend-signin
   conditions: []
-  id: null
   identifiers:
-    pk: c0f1fe81-ee06-43a8-ad75-0f87ef6d1492
+    name: dreammall.earth-redirect-frontend-signin
+  id: dreammall.earth-redirect-frontend-signin
   model: authentik_policies_expression.expressionpolicy
   state: present
 - attrs:
@@ -135,7 +143,7 @@ entries:
   model: authentik_stages_email.emailstage
   state: present
 - attrs:
-    create_users_group: 1c3afc69-3ef2-427f-a62e-4e4b11f3c669
+    create_users_group: !KeyOf dreammall-user-group
     user_creation_mode: always_create
     user_type: external
   conditions: []
@@ -192,12 +200,7 @@ entries:
   identifiers:
     order: 100
     pk: 7ce6d02a-4c19-4895-bc43-899e15379a2b
-    policy: c0f1fe81-ee06-43a8-ad75-0f87ef6d1492
+    policy: !KeyOf dreammall.earth-redirect-frontend-signin
     target: 71560401-adab-4888-bbef-7cc8597971e1
   model: authentik_policies.policybinding
   state: present
-metadata:
-  labels:
-    blueprints.goauthentik.io/generated: 'true'
-  name: authentik Export - 2024-04-11 21:36:30.569510+00:00
-version: 1
