--- a/authentik/docker-compose.override.yml
+++ b/authentik/docker-compose.override.yml
@@ -1,11 +1,12 @@
-x-mail-settings: &x-mail-settings
-  environment:
-    - AUTHENTIK_EMAIL__HOST=mailpit
-    - AUTHENTIK_EMAIL__PORT=1025
-    - AUTHENTIK_EMAIL__USE_TLS=false
-    - AUTHENTIK_EMAIL__USE_SSL=false
-    - AUTHENTIK_EMAIL__TIMEOUT=10
-    - AUTHENTIK_EMAIL__FROM=authentik@example.com
+x-shared-environments: &x-shared-environments
+  AUTHENTIK_EMAIL__HOST: mailpit
+  AUTHENTIK_EMAIL__PORT: 1025
+  AUTHENTIK_EMAIL__USE_TLS: false
+  AUTHENTIK_EMAIL__USE_SSL: false
+  AUTHENTIK_EMAIL__TIMEOUT: 10
+  AUTHENTIK_EMAIL__FROM: authentik@example.com
+  AUTHENTIK_BOOTSTRAP_PASSWORD: dreammall
+  AUTHENTIK_BOOTSTRAP_EMAIL: admin@dreammall.earth
 
 services:
   mailpit:
@@ -15,9 +16,13 @@ services:
       - 1025:1025
 
   authentik:
-    <<: *x-mail-settings
+    environment:
+      <<: *x-shared-environments
     depends_on:
       - mailpit
 
   authentik-worker:
-    <<: *x-mail-settings
+    environment:
+      <<: *x-shared-environments
+    volumes:
+      - ./blueprints:/blueprints
