feat(backend): json web key sets
Motivation
----------
See: https://auth0.com/docs/secure/tokens/json-web-tokens/json-web-key-sets

Authentik implements JWKS. This eliminates the need of sharing a public
key with the backend (through a file or base64 encoded environment
variable). It makes our deployment much easier, because the backend can
simply grab it's certificate. We can even change the certificate in
Authentik and the backend would still work!

As a side effect, we can use `jest.restoreAllMocks` in our tests,
because global mocks are gone.

How to test
-----------
1. `cp backend/.env.dist backend/.env`
2. `docker compose down -v`
3. `docker compose up -d postgresql`
4. `docker compose exec -T postgresql psql authentik --username authentik < authentik/dump.sql`
5. `docker compose build backend`
6. `docker compose up frontend backend`
7. Visit http://localhost:3000/ you will be able to log-in just fine

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -81,5 +81,5 @@ jobs:
       - name: Backend | docker-compose database
         run: docker compose -f docker-compose.yml up --detach --no-deps database
       - name: Backend | Unit
-        run: npm install && cp src/auth/public.pem . && npm run db:migrate && npm run test:unit
+        run: npm install && npm run db:migrate && npm run test:unit
         working-directory: ./backend
