--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -9,6 +9,8 @@ DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
 FRONTEND_URL="http://localhost:3000/"
 FRONTEND_INVITE_LINK_URL="${FRONTEND_URL}join-room/"
-  
+
 BBB_SHARED_SECRET=""
 BBB_URL=""
+
+JWKS_URI="http://localhost:9000/application/o/dreammallearth/jwks/"
