add new terms to pr workflow title scopes

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,12 +32,15 @@ jobs:
             admin
             authentik
             backend
+            deps
+            dev-deps
             docu
             docker
             frontend
             other
             presenter
             release
+            test
             workflow
           # Configure that a scope must always be provided.
           requireScope: true
