refactor(workflow): extend pr workflow title scopes (#1543)
* order pr workflow title scopes alphabetically

* add new terms to pr workflow title scopes

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,16 +29,19 @@ jobs:
           # Configure which scopes are allowed (newline delimited).
           # Append a scope for each service here
           scopes: |
-            backend
-            presenter
-            frontend
             admin
             authentik
+            backend
+            deps
+            dev-deps
             docu
             docker
-            release
-            workflow
+            frontend
             other
+            presenter
+            release
+            test
+            workflow
           # Configure that a scope must always be provided.
           requireScope: true
           # Configure which scopes (newline delimited) are disallowed in PR
